refactoring loans, notifications